<resources>
    <string name="app_name">GetMyDriverCardApp</string>
    <string name="title_activity_login">Sign in</string>

    <string-array name="filter_citeria">
        <item>Name</item>
        <item>ID</item>
        <item>Date</item>
        <item>Status</item>
    </string-array>

    <string-array name="status">
        <item>New</item>
        <item>In Progress</item>
        <item>Rejected</item>
        <item>Completed</item>
    </string-array>

    <string-array name="replacement_reasons">
        <item>My card was stolen</item>
        <item>I lost my card</item>
        <item>I changed my address</item>
        <item>I changed my name</item>
        <item>I want to change my photo</item>
        <item>My card is damaged</item>
        <item>My card is malfunctioning</item>
    </string-array>

    <string-array name="renewal_reasons">
        <item>My card has expired</item>
        <item>My card was withdrawn</item>
    </string-array>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_selfie_capture">SelfieCaptureActivity</string>
    <string name="id">ID</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="birth_date">Birth date</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone number</string>
    <string name="email">Email</string>
    <string name="Next_button">Next</string>
    <string name="New_card">a first digital tachograph card</string>
    <string name="Exchange_card">I have an EU card and I want to exchange it for BG card</string>
    <string name="Replace_card">to replace my digital tachograph card</string>
    <string name="Renew_card">to renew my digital tachograph card</string>
    <string name="applying_question">What are you applying for?</string>
    <string name="replacement_question">Why do you want to replace your current card?</string>
</resources>
