<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.fragments.PersonalDetailsFragment">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/id"
        android:id="@+id/tv_user_id"

        />
        <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/et_user_id"
            android:layout_below="@+id/tv_user_id"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/first_name"
            android:id="@+id/tv_first_name"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/et_et_first_name"
            android:layout_below="@+id/tv_first_name"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/last_name"
            android:id="@+id/tv_last_name"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/et_last_name"
            android:layout_below="@+id/tv_last_name"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/birth_date"
            android:id="@+id/tv_birth_date"
            />
        <DatePicker
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/dp_date_of_birth"
            android:layout_below="@+id/tv_birth_date"/>


    </RelativeLayout>

</FrameLayout>