<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.fragments.PersonalDetailsFragment">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/id"
                android:id="@+id/tv_user_id" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_user_id"
                android:layout_below="@+id/tv_user_id"
                android:inputType="text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/first_name"
                android:id="@+id/tv_first_name"
                android:layout_below="@+id/et_user_id"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_first_name"
                android:layout_below="@+id/tv_first_name"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/last_name"
                android:id="@+id/tv_last_name"
                android:layout_below="@id/et_first_name" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_last_name"
                android:layout_below="@+id/tv_last_name"/>

            <TextView
                android:id="@+id/tv_birth_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/et_last_name"
                android:text="@string/birth_date" />

            <LinearLayout
                android:id="@+id/ll_birth_date"
                android:orientation="horizontal"
                android:layout_below="@id/tv_birth_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_birth_date_preview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Date preview will appear here"
                    android:textStyle="italic"/>

                <Button
                    android:id="@+id/btn_pick_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Pick a date"
                    android:textColor="@android:color/holo_green_light"/>
            </LinearLayout>

            <Button
                android:id="@+id/btn_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Next"
                android:textColor="@android:color/white"
                android:background="@android:color/holo_blue_light"
                android:layout_below="@id/ll_birth_date"
                android:layout_centerInParent="true"/>
        </RelativeLayout>
</FrameLayout>